logs/dag_id=spotify_saved_tracks_etl_pipeline/run_id=manual__2025-09-15T06:34:35.208642+00:00/task_id=gold_saved_transform/attempt=1.log
[2025-09-15T06:35:52.086+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spotify_saved_tracks_etl_pipeline.gold_saved_transform manual__2025-09-15T06:34:35.208642+00:00 [queued]>
[2025-09-15T06:35:52.094+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spotify_saved_tracks_etl_pipeline.gold_saved_transform manual__2025-09-15T06:34:35.208642+00:00 [queued]>
[2025-09-15T06:35:52.095+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 6
[2025-09-15T06:35:52.245+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): gold_saved_transform> on 2025-09-15 06:34:35.208642+00:00
[2025-09-15T06:35:52.255+0000] {standard_task_runner.py:57} INFO - Started process 31664 to run task
[2025-09-15T06:35:52.258+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'spotify_saved_tracks_etl_pipeline', 'gold_saved_transform', 'manual__2025-09-15T06:34:35.208642+00:00', '--job-id', '794', '--raw', '--subdir', 'DAGS_FOLDER/spotify_saved_dag.py', '--cfg-path', '/tmp/tmpf2ye2dah']
[2025-09-15T06:35:52.261+0000] {standard_task_runner.py:85} INFO - Job 794: Subtask gold_saved_transform
[2025-09-15T06:35:52.316+0000] {task_command.py:415} INFO - Running <TaskInstance: spotify_saved_tracks_etl_pipeline.gold_saved_transform manual__2025-09-15T06:34:35.208642+00:00 [running]> on host 0d0cd054d690
[2025-09-15T06:35:52.379+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='spotify_saved_tracks_etl_pipeline' AIRFLOW_CTX_TASK_ID='gold_saved_transform' AIRFLOW_CTX_EXECUTION_DATE='2025-09-15T06:34:35.208642+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-09-15T06:34:35.208642+00:00'
[2025-09-15T06:35:52.384+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/etl/db_utils.py", line 11, in run_sql_scripts
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "IF"
LINE 3: DROP IF EXISTS gold.fact_saved_songs;
             ^

[2025-09-15T06:35:52.392+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=spotify_saved_tracks_etl_pipeline, task_id=gold_saved_transform, execution_date=20250915T063435, start_date=20250915T063552, end_date=20250915T063552
[2025-09-15T06:35:52.401+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 794 for task gold_saved_transform (syntax error at or near "IF"
LINE 3: DROP IF EXISTS gold.fact_saved_songs;
             ^
; 31664)
[2025-09-15T06:35:52.440+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2025-09-15T06:35:52.458+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
